--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,8 +1,11 @@
 <resources>
-
     <string name="app_name">Sigimera</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
-
+    <string name="edit_message">Enter a message</string>
+       	
+    <string name="email_text">Enter your e-mail</string>
+    <string name="password_text">Password</string>
+    <string name="login_button">Login</string>    
 </resources>
