--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_login">Login</string>
     <string name="title_activity_crises_list">Crises List</string>
+    <string name="title_activity_crisis">Crises Info</string>
 </resources>
