--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,4 +13,9 @@
     <string name="title_activity_login">Login</string>
     <string name="title_activity_crises_list">Crises List</string>
     <string name="title_activity_crisis">Crisis Info</string>
+	<string name="title_activity_map">Crisis Map</string>    
+    
+    <!-- Develop credentials -->
+    <string name="dev_username">johndoe@example.org</string>
+    <string name="dev_password">testing</string>
 </resources>
