--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Sigimera - Crises</string>
+    <string name="about">About</string>
     <string name="logo_description">Sigimera Logo</string>
     <string name="crisis_type_logo_description">Sigimera Logo</string>
     <string name="menu_settings">Settings</string>
